Debuggers, Neo fixes, more (pre 1.21.1 bump)